Sigil 0.6.0 TBA 
    - Implement issue 1612: Improve performance of merging files.
    - Implement issue 1611: Improve performance of switching and closing tabs.
    - Implement issue 1610: Use html instead of xhtml as the default extension for new blank HTML files.
    - Implement issue 1606: Allow rename of titles in Generate Table Of Contents and show filenames in tooltip.
    - Implement issue 1601: Delete unused Images.
    - Implement issue 1602: Delete unused Styles.
    - Implement issue 1603: Allow formatting buttons to work in Code View.
    - Implement issue 1597: Show HTML tag information for current location in text while in Book View.
    - Implement issue 1594: Allow miscellaneous text files to be edited and others to be opened externally.
    - Implement issue 1590: Insert image should allow insert from disk.
    - Implement issue 1557: Sigil requires Qt 4.8 or above.
    - Implement issue 1586: Spellcheck should allow setting a keyboard shortcut for Ignore Word to speed editing.
    - Implement issue 1585: Spellcheck should have a menu entry to clear all ignored words.
    - Implement issue 1584: Sigil should allow CSS file to be edited while viewing HTML.
    - Implement issue 1583: Sigil should remember the current view state when it restarts.
    - Implement issue 1573: Improve performance of bulk rename.
    - Implement issue 1468: Allow images to be opened externally.
    - Implement issue 1571: Display whether classes are used in the HTML or CSS files in a new Reports dialog.
    - Implement issue 1572: Add feature to re-format CSS files
    - Implement issue 1567: Remove XPGT support.
    - Implement issue 755: Support 'code view' for svg images that are loaded as separate files.
    - Implement issue 1561: Add Save A Copy option to save file under a different name without renaming current file.
    - Implement issue 1559: Add option to insert special characters into document.